# great_expectations

./: .coderabbit.yaml  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .merge_file_9Wzo5l  .merge_file_bDfMiQ  .merge_file_dPHAyp  .merge_file_qUyYmE  .mypy.ini  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  .travis.yml  2  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING_CODE.md  CONTRIBUTING_EXPECTATIONS.md  CONTRIBUTING_PACKAGES.md  CONTRIBUTING_WORKFLOWS.md  Changelog.md  Demo ColumnDescriptiveMetrics.ipynb  Distribution_Expectation_Example.ipynb  Dockerfile  IDE_SETUP_TIPS.md  Jenkinsfile  MANIFEST.in  README.md  README.rst  SLACK_GUIDELINES.md  SLACK_GUIDLINES.md  Taking IDPK for a drive - Panda.ipynb  (+150 more)
.github/: dependabot.yml  pr-title-checker-config.json  pull_request_template.md  release.yml  release_schedule.json  stale.yml  teams.yml
.run/: pytestall_no_integration.run.xml
azure/: azure-pipelines-cloud-integration.yml  azure-pipelines-expectation-gallery.yml  azure-pipelines-packaging.yml  azure-pipelines.yml  dev-install-matrix.yml  matrix-dev-install.yml  matrix-user-install.yml  matrix.yml  user-install-matrix.yml
ci/: README.md  azure-pipelines-cloud-integration.yml  azure-pipelines-contrib.yml  azure-pipelines-dev-spark-test.yml  azure-pipelines-dev.yml  azure-pipelines-docs-integration.yml  azure-pipelines-docs.yml  azure-pipelines-gcp-integration.yml  azure-pipelines-os-integration.yml  azure-pipelines-packaging.yml  azure-pipelines-partner-integration.yml  azure-pipelines-sqlalchemy-compatibility.yml  azure-pipelines.yml  dev-install-matrix.yml  user-install-matrix.yml
constraints-test/: py310-min-install.txt
contrib/: README.md  ruff.toml
docker/: Dockerfile  Dockerfile.tests  README.md  build.py  io.greatexpectations.build_docker_dev_image.plist  requirements.txt
docs/: .adr-dir  .gitignore  Makefile  README.md  __init__.py  basics.rst  build_docs  build_docs_locally  build_docs_locally.sh  changelog.md  changelog.rst  command_line.rst  community.md  community.rst  conf.py  conftest.py  contributing.rst  core_concepts.rst  docs_build.py  docs_requirements.txt  docs_version_bucket_info.py  docusaurus.config.js  expectation_glossary.rst  feature_annotation_parser.py  feature_maturity_content.json  feature_maturity_toc.json  features.rst  getting_started.rst  glossary.md  glossary.rst  guides.rst  how_to_guides.rst  index.rst  intro.md  intro.rst  logging.py  logging.sh  make.bat  module_docs.rst  package.json  (+14 more)
docs_pending/: how_to_quickly_connect_to_a_single_file_using_pandas.md  tutorial_create_expectations_onboarding_assistant.md
docs_rtd/: .gitignore  Makefile  changelog.rst  community.rst  conf.py  conftest.py  contributing.rst  feature_annotation_parser.py  feature_maturity_content.json  guides.rst  index.rst  intro.rst  reference.rst  releasing.rst  requirements.txt
examples/: Distributional_Expectations_Demo_Prep.ipynb
ge_dev/: pyodbc.pyi
great_expectations/: __init__.py  _docs_decorators.py  _get_context.py  _version.py  alias_types.py  cli.py  connections.py  dbt_tools.py  deployment_version  deprecation_wrappers.py  df_to_database_loader.py  exceptions.py  expectation_suite.py  file_expectations.py  foobar.py  o  optional_imports.py  sqlalchemy_compatibility_wrappers.py  suite_to_notebook.py  types.py  util.py  version.py  warnings.py
great_expectations_airflow/: __init__.py
great_expectations_dev/: pyvenv.cfg
great_expectations_v1/: __init__.py  _docs_decorators.py  _version.py  constants.py  util.py
gx_v0/: __init__.py
gx_venv/: pyodbc.pyi  pyvenv.cfg
performance/: cli_integration.txt  compatability.txt  comprehensive.txt  mssql.txt  mysql.txt  usage_stats.txt
readme_assets/: Python Programmer _ Developers _ Groups _ LinkedIn.htm
reqs/: README.md  requirements-dev-airflow.txt  requirements-dev-all-contrib-expectations.txt  requirements-dev-api-docs-test.txt  requirements-dev-api-docs.txt  requirements-dev-arrow.txt  requirements-dev-athena.txt  requirements-dev-azure.txt  requirements-dev-bigquery.txt  requirements-dev-clickhouse.txt  requirements-dev-cloud-tests.txt  requirements-dev-cloud.txt  requirements-dev-contrib.txt  requirements-dev-databricks.txt  requirements-dev-dremio.txt  requirements-dev-excel.txt  requirements-dev-hive.txt  requirements-dev-lite.txt  requirements-dev-mssql.txt  requirements-dev-mysql.txt  requirements-dev-pagerduty.txt  requirements-dev-polars.txt  requirements-dev-postgresql.txt  requirements-dev-snowflake.txt  requirements-dev-spark-connect.txt  requirements-dev-spark.txt  requirements-dev-sqlalchemy-less-than-2.txt  requirements-dev-sqlalchemy.txt  requirements-dev-sqlalchemy1.txt  requirements-dev-sqlalchemy2.txt  requirements-dev-teradata.txt  requirements-dev-test.txt  requirements-dev-tools.txt  requirements-dev-trino.txt  requirements-dev-types.txt  requirements-dev-vertica.txt
scratch/: convert_text_sets.py  data-docs-walkthrough.md  explore_distributional_tests_20170721.ipynb  generate_json_test_sets.py  generate_rst_table_for_missing_expectations.ipynb
scripts/: __init__.py  build_api_docs.py  build_glossary_page.py  check_docstring_coverage.py  check_docstrings  check_for_docs_deps_changes  check_for_technical_terms.py  check_no_line_number_snippets.py  check_public_api_docstrings.py  check_repo_root_size.sh  check_type_hint_coverage  check_type_hint_coverage.py  determine_test_files_to_run.py  determine_tests_to_run.py  docs_link_checker.py  docstring_format_public_api.py  gen_gx_v0_package.py  gen_gx_v1_mirror_package.py  gen_stub.py  generate_public_api_list.py  public_api_report.py  pypideptree.py  snippet_mover.py  snippet_mover_report.txt  trace_docs_deps.py  update_tutorial_version_info.py  validate_docs_snippet_line_numbers.py  validate_docs_snippets.py
snapshots/: snap_temp.py
sphinx_markdown_api_docs/: Makefile  conf.py  index.md
src/: index.js
static/: .gitignore  _redirects  index.html
tests/: __init__.py  conftest.py  (+64 more)
(+10149 files in other folders)
