[build-system]
requires = ["setuptools", "wheel"]
# uncomment to enable pep517 after versioneer problem is fixed.
# https://github.com/python-versioneer/python-versioneer/issues/193
# build-backend = "setuptools.build_meta"

[tool.black]
extend_excludes = '''(docs/.*|tests/.*.fixture|.*.ge_store_backend_id)'''

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ['venv/*', 'docs/*']

[tool.mypy]
files = ["great_expectations"]
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = 'silent'
warn_redundant_casts = true
show_error_codes = true
exclude = [
    'checkpoint',
    'cli',
    'core',
    'datasource',
    'data_context',
    'execution_engine',
    'marshmallow__shade',
    'expectations/metrics',
    '.*render',
    'expectations/expectation',
]

[tool.pytest.ini_options]
filterwarnings = [
    # This warning is common during testing where we intentionally use a COMPLETE format even in cases that would
    # be potentially overly resource intensive in standard operation
    "ignore:Setting result format to COMPLETE for a SqlAlchemyDataset:UserWarning",
    # This deprecation warning was fixed in moto release 1.3.15, and the filter should be removed once we migrate
    # to that minimum version
    "ignore:Using or importing the ABCs:DeprecationWarning:moto.cloudformation.parsing",
    # This deprecation warning comes from getsentry/responses, a mocking utility for requests. It is a dependency in moto.
    "ignore:stream argument is deprecated. Use stream parameter in request directly:DeprecationWarning",
]
junit_family="xunit2"
markers = [
    "docs: mark a test as a docs test.",
    "unit: mark a test as a unit test.",
    "integration: mark test as an integration test.",
    "e2e: mark test as an E2E test.",
    "external_sqldialect: mark test as requiring install of an external sql dialect.",
    "cloud: mark test as being relevant to Great Expectations Cloud.",
    "base_data_context: mark test as being relevant to BaseDataContext, which will be removed during refactor",
]
testpaths = "tests"
